--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-flask
-gunicorn
-torch
-transformers
-langchain
-boto3
+flask==3.0.0
+transformers>=4.36.0
+torch>=2.0.0
+langchain>=0.1.0
+pytest>=7.4.0
+python-dotenv>=1.0.0
+datasets>=2.15.0
+numpy>=1.24.0
+tqdm>=4.65.0
+
