--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ flask==3.0.0
 transformers>=4.36.0
 torch>=2.0.0
 langchain>=0.1.0
-langchain-community>=0.0.10
 pytest>=7.4.0
 python-dotenv>=1.0.0
-
+faiss-cpu>=1.7.4
+sentence-transformers>=2.2.2
+huggingface-hub>=0.20.2
